<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/clothes"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/recommend"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/deal"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/shopping"
        android:title="@string/title_mypage"/>
    <item
        android:id="@+id/navigation_mypage2"
        android:icon="@drawable/mypage"
        android:title="@string/title_mypage2"/>

</menu>
